# gpt.rs

./: .gitignore  Cargo.toml
src/: lib.rs
src/cli/: commands.rs  mod.rs  options.rs
src/gpt/: mod.rs  validation.rs
src/gpt/openai/: api.rs  mod.rs  model.rs
src/gpt/prompt/: mod.rs
src/hook/: mod.rs
