[package]
name = "gpt-cli"
version = "0.1.0"
edition = "2021"
default-run = "gpt"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lib]
name = "gpt"

[[bin]]
name = "gpt"

[[bin]]
name = "prepare-commit-msg"

[dependencies]
atty = "0.2.14"
clap = { version = "4.2.7", features = ["cargo", "derive", "env"] }
reqwest = { version = "0.11.17", features = ["json", "blocking"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
